force-app/main/default/objects/Lead/fields/Linkedln__c.field-meta.xml
<CustomField>
    <fullName>Linkedln__c</fullName>
    <label>Linkedln</label>
    <type>Url</type>
</CustomField>