force-app/main/default/objects/Lead/fields/Other_URL__c.field-meta.xml
<CustomField>
    <fullName>Other_URL__c</fullName>
    <label>Other URL</label>
    <type>Url</type>
</CustomField>