force-app/main/default/objects/Lead/fields/Parent_Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Parent_Law_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Law Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>